crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__month__multiple__specifier__specifier_periodic.snap
---
source: crates/tools/cron/src/tests/unit/month.rs
expression: result
---
Ok(
    (
        "",
        MonthRule {
            kinds: [
                MonthKind {
                    range: (
                        January,
                        January,
                    ),
                    periodic: MonthPeriodic(
                        1,
                    ),
                },
                MonthKind {
                    range: (
                        March,
                        March,
                    ),
                    periodic: MonthPeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
